# electribe-song-mode

./: CMakeLists.txt  PatSelleck.cpp  README.md  build.sh  electribe-song-mode.cpp
include/: Beat.hpp  GUI.hpp  Heart.hpp  MIDIOutput.hpp  Pattern.hpp  Sequence.hpp  Worker.hpp
src/: Beat.cpp  GUI.cpp  Heart.cpp  MIDIOutput.cpp  Pattern.cpp  Sequence.cpp  Worker.cpp
